Fixed Products on mobile.

--- a/components/Products.module.scss
+++ b/components/Products.module.scss
@@ -76,13 +76,13 @@
 }
 
 @media screen and (max-width: 1024px) {
-	.categorie {
+	.product {
 		grid-column: span 6;
 	}
 }
 
 @media screen and (max-width: 768px) {
-	.categorie {
+	.product {
 		grid-column: span 12;
 		max-width: 90vw;
 	}
